<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedBackForm">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/amethysta"
        android:shadowColor="#000000"
        android:text="@string/feed_back_form_header"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="79dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="97dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="278dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/amethysta"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/give_your_feedback"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/onTimeScoreSpinner"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/staffIdEt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="153dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        android:gravity="center|start"
        android:text="@string/on_time_score"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Spinner
        android:id="@+id/serviceScoreSpinner"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/onTimeScoreSpinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="156dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="228dp"
        android:gravity="center|start"
        android:text="@string/service_score"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/feedbackSubmitBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="64dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/staffIdEt"
        android:layout_width="282dp"
        android:layout_height="49dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/staff_id"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/feedbackEt"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/feedback"
        android:inputType="text"
        android:lines="6"
        android:scrollbarStyle="insideInset"
        android:scrollHorizontally="false"
        app:layout_constraintBottom_toTopOf="@+id/feedbackSubmitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceScoreSpinner"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/feedbackListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="10dp"
        android:text="@string/feedback_list"
        app:layout_constraintBottom_toTopOf="@+id/feedbackSubmitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackEt" />


</androidx.constraintlayout.widget.ConstraintLayout>